cambio de titulo y tabla

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-        <h1>Titulo de pagina</h1>
+        <h1>TITULO</h1>
         <nav>
             <ul>
                 <li>
@@ -28,11 +28,11 @@
         <section>
             <table>
                 <tr>
-                    <th>Lunes</th>
-                    <th>Martes</th>
-                    <th>Miercoles</th>
-                    <th>Jueves</th>
-                    <th>Viernes</th>
+                    <th>}-Lunes-{</th>
+                    <th>}-Martes-{</th>
+                    <th>}-Miercoles-{</th>
+                    <th>}-Jueves-{</th>
+                    <th>}-Viernes-{</th>
                 </tr>
                 <tr>
                     <td>
